--- a/css/style.css
+++ b/css/style.css
@@ -1,1 +1,13 @@
+.card {
+  margin: 0 auto;
+  float: none;
+  margin: 60px 50px;
+}
 
+body {
+  min-height: 100vh;
+}
+
+.flex-grow {
+  flex: 1;
+}
