--- a/css/style.css
+++ b/css/style.css
@@ -1,10 +1,13 @@
 body {
-  background-color: #6c7b95;
+  background: linear-gradient(#464159, #6c7b95);
+  background-repeat: no-repeat;
+  background-attachment: fixed;
 }
 .card {
   float: none;
   margin: 80px 80px;
   border-radius: 8px;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
 
 footer {
@@ -12,8 +15,8 @@ footer {
   left: 0;
   bottom: 0;
   width: 100%;
-  background-color: #464159;
-  color: #6c7b95;
+  background-color: #6c7b95;
+  color: whitesmoke;
   text-align: center;
   font-size: 12px;
 }
