--- a/css/style.css
+++ b/css/style.css
@@ -1,21 +1,21 @@
 body {
-  background: linear-gradient(#464159, #6c7b95);
+  background: linear-gradient(#74a4bc, #6f8695);
   background-repeat: no-repeat;
   background-attachment: fixed;
 }
 .jumbotron {
-  background-color: #464159;
-
+  background-color: #5b85aa;
   color: white;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
 .container {
-  background: linear-gradient(#464159, #6c7b95);
+  background: linear-gradient(#74a4bc, #6f8695);
   background-repeat: no-repeat;
   background-attachment: fixed;
 }
 .card {
   float: none;
-  margin: 80px 80px;
+  margin: 30px 10px;
   border-radius: 8px;
   box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
@@ -25,25 +25,25 @@ footer {
   left: 0;
   bottom: 0;
   width: 100%;
-  background-color: #6c7b95;
+  background-color: #6f8695;
   color: whitesmoke;
   text-align: center;
   font-size: 12px;
 }
 
 .navbar {
-  background-color: #464159 !important;
+  background-color: #74a4bc !important;
 }
 
-h3 {
-  color: #6c7b95;
+h2 {
+  color: #74a4bc;
 }
 
 button {
-  background-color: #8bbabb !important;
+  background-color: #5b85aa !important;
   border-radius: 8px !important;
 }
 
 button:hover {
-  background-color: #c7f0db !important;
+  background-color: #274690 !important;
 }
