started work on portfolio

--- a/css/style.css
+++ b/css/style.css
@@ -47,3 +47,14 @@ button {
 button:hover {
   background-color: #274690 !important;
 }
+
+.nav-link {
+  color: whitesmoke !important;
+}
+
+.active {
+  color: #274690 !important;
+}
+.nav-link:hover {
+  color: #5b85aa !important;
+}
