--- a/assets/style.css
+++ b/assets/style.css
@@ -9,9 +9,17 @@ body {
   background-color: ghostwhite;
 }
 
-p {
+h2,
+h3,
+h6 {
+  font-family: "Rubik", sans-serif;
+  color: #4d5d53;
+  font-weight: bold;
+}
+.about {
   font-family: "Montserrat", sans-serif;
   font-weight: bold;
+  color: #4d5d53;
 }
 
 footer {
@@ -24,8 +32,7 @@ section {
   padding-bottom: 10px;
 }
 
-.btn,
-.navbar-toggler {
+.btn {
   background-color: #4d5d53;
 }
 
@@ -75,4 +82,7 @@ section {
 /* Bootstrap Overrides */
 .bg-dark {
   background: #80c68c !important;
+}
+.card-header {
+  background-color: ghostwhite !important;
 }
