--- a/assets/style.css
+++ b/assets/style.css
@@ -10,7 +10,7 @@ body {
 }
 
 h2,
-h3,
+h4,
 h6 {
   font-family: "Rubik", sans-serif;
   color: #4d5d53;
@@ -85,4 +85,8 @@ section {
 }
 .card-header {
   background-color: ghostwhite !important;
+}
+
+.headshot {
+  width: 100%;
 }
