--- a/assets/style.css
+++ b/assets/style.css
@@ -1,5 +1,6 @@
 /* font-family: 'Montserrat', sans-serif;
 font-family: 'Rubik', sans-serif; */
+
 html {
   scroll-behavior: smooth;
 }
@@ -93,3 +94,20 @@ section {
 .headshot {
   width: 100%;
 }
+
+/* .card {
+  position: relative;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+  -ms-flex-direction: column;
+  flex-direction: column;
+  min-width: 0;
+  word-wrap: break-word;
+  background-color: #fff;
+  background-clip: border-box;
+  border: 1px solid rgba(0, 0, 0, 0.125);
+  border-radius: 0.25rem;
+} */
