--- a/assets/style.css
+++ b/assets/style.css
@@ -10,19 +10,19 @@ body {
   background-color: ghostwhite;
 }
 
-h2,
+/* h2,
 h4,
 h6 {
   font-family: "Rubik", sans-serif;
   color: #4d5d53;
   font-weight: bold;
-}
-.about {
+} */
+/* .about {
   font-family: "Montserrat", sans-serif;
   font-weight: bold;
   color: #4d5d53;
   padding-top: 50px;
-}
+} */
 
 footer {
   background: #a6fcb7;
@@ -34,19 +34,19 @@ section {
   padding-bottom: 10px;
 }
 
-.btn {
+/* .btn {
   background-color: #4d5d53;
 }
 
 .btn:hover {
   background-color: #80c68c;
   outline-color: none;
-}
+} */
 
 .nav-link,
 .navbar-brand {
-  color: #4d5d53 !important;
-  font-family: "Rubik", sans-serif;
+  /* color: #4d5d53 !important;
+  font-family: "Rubik", sans-serif; */
   font-weight: bold;
   font-size: 18px;
 }
@@ -84,30 +84,13 @@ section {
   padding-bottom: 100px;
 }
 
-.bg-dark {
+/* .bg-dark {
   background: #80c68c !important;
-}
-.card-header {
+} */
+/* .card-header {
   background-color: ghostwhite !important;
-}
+} */
 
 .headshot {
   width: 100%;
 }
-
-/* .card {
-  position: relative;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-orient: vertical;
-  -webkit-box-direction: normal;
-  -ms-flex-direction: column;
-  flex-direction: column;
-  min-width: 0;
-  word-wrap: break-word;
-  background-color: #fff;
-  background-clip: border-box;
-  border: 1px solid rgba(0, 0, 0, 0.125);
-  border-radius: 0.25rem;
-} */
