added about me section with headshot pic

--- a/assets/style.css
+++ b/assets/style.css
@@ -17,12 +17,10 @@ h6 {
   color: #4d5d53;
   font-weight: bold;
 } */
-/* .about {
-  font-family: "Montserrat", sans-serif;
+.about {
   font-weight: bold;
-  color: #4d5d53;
   padding-top: 50px;
-} */
+}
 
 footer {
   background: #a6fcb7;
