--- a/assets/style.css
+++ b/assets/style.css
@@ -1,30 +1,30 @@
-/* font-family: 'Montserrat', sans-serif;
-font-family: 'Rubik', sans-serif; */
-
 html {
   scroll-behavior: smooth;
 }
 
 body {
   padding-top: 100px;
-  background-color: ghostwhite;
+  background-color: #def2f1;
 }
 
-/* h2,
+h2,
 h4,
+h5,
 h6 {
-  font-family: "Rubik", sans-serif;
-  color: #4d5d53;
+  color: #2b7a78;
+}
+
+h5 {
   font-weight: bold;
-} */
+}
 .about {
-  font-weight: bold;
+  font-weight: normal;
   padding-top: 50px;
 }
 
 footer {
-  background: #a6fcb7;
-  color: black;
+  background: #17252a;
+  color: #def2f1;
 }
 
 section {
@@ -32,44 +32,58 @@ section {
   padding-bottom: 10px;
 }
 
-/* .btn {
-  background-color: #4d5d53;
+.btn-sm {
+  margin-right: 6px;
+}
+
+.btn {
+  background-color: #17252a;
+  color: #def2f1;
+  font-size: 11px;
+  text-transform: uppercase;
+  letter-spacing: 2.5px;
+  border: none;
+  box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.1);
+  transition: all 0.3s ease 0s;
+  cursor: pointer;
+  outline: none;
 }
 
 .btn:hover {
-  background-color: #80c68c;
-  outline-color: none;
-} */
+  background-color: #2b7a78;
+  color: #def2f1;
+}
 
 .nav-link,
 .navbar-brand {
-  /* color: #4d5d53 !important;
-  font-family: "Rubik", sans-serif; */
-  font-weight: bold;
+  color: #def2f1 !important;
+  font-weight: normal;
   font-size: 18px;
 }
 
-.wrld-ic,
 .gh-ic,
 .li-ic,
 .ins-ic,
 .mailto,
 .tel {
-  color: #4d5d53;
+  color: #2b7a78;
 }
-.wrld-ic:hover,
-.nav-link:hover,
+
 .gh-ic:hover,
 .li-ic:hover,
 .ins-ic:hover {
-  color: #a6fcb7 !important;
+  color: #def2f1 !important;
   text-decoration: none;
   cursor: pointer;
 }
 
+.nav-link:hover {
+  color: #2b7a78 !important;
+}
+
 .mailto:hover,
 .tel:hover {
-  color: #4d5d53;
+  color: #def2f1;
 }
 
 .logo {
@@ -82,12 +96,9 @@ section {
   padding-bottom: 100px;
 }
 
-/* .bg-dark {
-  background: #80c68c !important;
-} */
-/* .card-header {
-  background-color: ghostwhite !important;
-} */
+.bg-dark {
+  background: #17252a !important;
+}
 
 .headshot {
   width: 100%;
